// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas Shareable Workpad API Placed successfully with default properties 1`] = `
<div
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with default properties 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 768px; width: 1080px;"
  >
    <div
      class="container"
      style="height: 720px; width: 1080px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(1, 1, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canvas Shareable Workpad API Placed successfully with height specified 1`] = `
<div
  kbn-canvas-height="350"
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with height specified 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 398px; width: 525px;"
  >
    <div
      class="container"
      style="height: 350px; width: 525px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(0.48611111111111116, 0.4861111111111111, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canvas Shareable Workpad API Placed successfully with page specified 1`] = `
<div
  kbn-canvas-page="0"
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with page specified 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 768px; width: 1080px;"
  >
    <div
      class="container"
      style="height: 720px; width: 1080px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(1, 1, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canvas Shareable Workpad API Placed successfully with width and height specified 1`] = `
<div
  kbn-canvas-height="350"
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
  kbn-canvas-width="350"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with width and height specified 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 398px; width: 350px;"
  >
    <div
      class="container"
      style="height: 350px; width: 350px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(0.32407407407407407, 0.32407407407407407, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Canvas Shareable Workpad API Placed successfully with width specified 1`] = `
<div
  kbn-canvas-shareable="canvas"
  kbn-canvas-url="workpad.json"
  kbn-canvas-width="400"
/>
`;

exports[`Canvas Shareable Workpad API Placed successfully with width specified 2`] = `
<div
  class="kbnCanvas"
>
  <div
    class="root"
    style="height: 315px; width: 400px;"
  >
    <div
      class="container"
      style="height: 267px; width: 400px;"
    >
      <div
        class="page"
        style="height: 720px; transform: scale3d(0.37037037037037035, 0.37037037037037035, 1); width: 1080px;"
      >
        <div
          class="root"
          id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
          style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
        >
          <div
            class="canvasPositionable canvasInteractable"
            style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
          >
            <div
              class="root"
            >
              <div
                class="container"
                css="css-159kt7d"
                style="overflow: hidden;"
              >
                <div
                  class="content"
                >
                  <div
                    class="renderContainer"
                  >
                    <div
                      class="render"
                      data-renderer="markdown"
                    >
                      <div>
                        markdown mock
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root"
      style="height: 48px;"
    >
      <div
        class="root"
      >
        <div
          class="slideContainer"
        >
          <div
            class="root"
            style="height: 100px; width: 150px;"
          >
            <div
              class="preview"
              style="height: 720px; width: 1080px; transform: scale3d(0.1388888888888889, 0.1388888888888889, 1);"
            >
              <div
                class="root"
                id="page-7186b301-f8a7-4c65-8b89-38d68d31cfc4"
                style="height: 720px; width: 1080px; background: rgb(119, 119, 119);"
              >
                <div
                  class="canvasPositionable canvasInteractable"
                  style="width: 1082px; height: 205.37748344370857px; margin-left: -541px; margin-top: -102.68874172185429px; position: absolute; transform: matrix3d(1,0,0,0,0,1,0,0,0,0,1,0,540,367,1,1);"
                >
                  <div
                    class="root"
                  >
                    <div
                      class="container"
                      css="css-159kt7d"
                      style="overflow: hidden;"
                    >
                      <div
                        class="content"
                      >
                        <div
                          class="renderContainer"
                        >
                          <div
                            class="render"
                            data-renderer="markdown"
                          >
                            <div>
                              markdown mock
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
